# psy

./: .gitignore  Cargo.toml  FIX_WSL.md  INSTALL_RUST.md  PLATFORM_DOCUMENTATION.md  README.md  RUN_STEPS.md
docs/: ARCHITECTURE.md
scripts/: demo.sh
src/: commitments.rs  identity.rs  lib.rs  proofs.rs
static/: app.js  index.html  style.css
