[package]
name = "zerotrace"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chacha20poly1305 = "0.10"
ed25519-dalek = "1.0"
rand = "0.7"
rand_core = "0.5"
anyhow = "1"
base64 = "0.21"
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
actix-files = "0.6"
actix-cors = "0.6"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client_example"
path = "src/bin/client_example.rs"

[dependencies.reqwest]
version = "0.11"
features = ["json"]

